# tag-anywhere

./: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  tauri_file_hash.rs  tauri_file_operation.rs  tauri_file_scan.rs  tauri_file_stats.rs  tauri_file_thumbnail.rs  tauri_video_frame.rs
src/api/: api-slice.ts  middleware.ts
src/api/api/: database-helper.ts  file-api.ts  helper-api.ts  helper.ts  library-api.ts  rust-api.ts  settings-api.ts  setup-api.ts  tag-api.ts
src/api/database/: database-manager.ts
src/api/schema/: database-common.ts  setup.ts
src/components/: empty-layout.tsx
src/components/composition/: alert-dialog.tsx  backable-header.tsx  editable-text.tsx  file-display.tsx  file-stats-panel.tsx  file-tags-panel.tsx  files-section.tsx  image-viewer.tsx  libraries-section.tsx  library-display.tsx  loading-dialog.tsx  mode-toggle.tsx  pagination-control.tsx  refresh-button.tsx  section-hook.ts  tag-badge.tsx  tag-context.tsx  tag-display.tsx  tags-section.tsx
src/components/ui/: autosize-textarea.tsx  button.tsx  combobox.tsx  image.tsx  link.tsx  loaders.tsx  multi-selector.tsx  popover.tsx  progress.tsx  select-helper.tsx  slider.tsx  typography.tsx  video-player.tsx  (+1 more)
src/lib/: collection-enum.ts  collection-utils.ts  condition-utils.ts  file-enum.ts  format-utils.ts  other-utils.ts  path-utils.ts  system-utils.ts  text-utils.ts  type-utils.ts
src/pages/: index-cache-guard.tsx  navbar.tsx  root.tsx
src/store/: store.ts
(+35 files in other folders)
